cmake_minimum_required(VERSION 3.14)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled main.cpp maxMConsecutiveSum.h charCount.h stringSort.h LongestPalindromeSubsequence.h maxFont.h game1024.h addOneChar.h stringMatch.h minCargos.h numberOfPalindrome.h StringRLECompression.h plusMinusCaculator.h maxSubstringSum.h largestUnoverlapStringproduct.h windPowerStation.h whichDayOfYear.h theNthNumber.h decimalRepresentation.h climbSteps.h bubbleSortCount.h stocksExchange.h catFood.h goodNumber.h auc.h minBoxes.h maxGroupNumbers.h hopscotch.h feedKids.h userPreferenceQuery.h drinkCoffee.h bracelets.h test.h robotsInLine.h possibleCombination.h moveCharsToContinuous.h necklace.h upperBound.h TreeMaxRouteLength.h ChangeOneNumberToLongestConsecutiveIncreasingSequence.h isomorphsim.h strangeLetters.h assetBags.h)