cmake_minimum_required(VERSION 3.14)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled main.cpp colorSockets.h handleBar.h subStringNumber.h GapOverlap.h seatCombination.h minHurt.h reachPoints.h Adaboost.h gamePossibleCombination.h simulSQL.h circleGame.h chaosMinus.h reverseK.h numberConverse.h tecent1.h tencent3.h longestIncreasingPath.h pinduoduo01-0802.h jindong-1.h jindong-2.h dictOfDuoDuo.h SieveExpectation.h)