cmake_minimum_required(VERSION 3.14)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled main.cpp colorSockets.h handleBar.h subStringNumber.h GapOverlap.h seatCombination.h minHurt.h reachPoints.h Adaboost.h gamePossibleCombination.h simulSQL.h circleGame.h chaosMinus.h reverseK.h numberConverse.h tecent1.h tencent3.h longestIncreasingPath.h pinduoduo01-0802.h jindong-1.h jindong-2.h dictOfDuoDuo.h SieveExpectation.h QiXingBuKao.h CrossCut.h RecipeTime.h transformWords.h consequentPrime.h time4inverseOrderNumber.h travelTimes.h mergeLocations.h choiceVechies.h perfectPair.h tecent0823.h tecent0823-2.h pinduoduo-0901-1.h pinduoduo-0901-2.h pinduoduo-4.h gcd.h baidu-0903-2.h test1127.h unRepeatedSubstring.h binarySearch.h TreeTrackSumK.h KNN.h)